# COO-Workbench

./: LICENSE  README.md  pyproject.toml
camera-control/: README.md  cameraD.cpp
controls-python/: README.md  bonn_shutter.py
daemon-testing/: README.md  fw_test_daemon  gim_test_daemon
mKTL-Testing/: 2test.py  README.md  atcf.py
